--- a/index.html
+++ b/index.html
@@ -587,13 +587,13 @@
 							case '1.0':
 							case '1.1':
 							case '1.3':
-								var map={
+								var set=0;
+								location={
 									'0':0,'1':1,'2':2,'3':3,'4':4,'5':5,'6':6,'7':7,'8':8,
 									'9':9,'10':10,'11':11,'12':12,'13':13,'14':14,'15':15,
 									'K':0,'B':1,'G':2,'C':3,'R':4,'M':5,'Y':6,'W':7,'k':8,
 									'b':9,'g':10,'c':11,'r':12,'m':13,'y':14,'w':15,
-								},set=0;
-								location=map[location];
+								}[location];
 								if(location>8){
 									location-=8;
 									set=1;
